<resources>
    <string name="app_name">DrivingSchool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--登录-->
    <string name="login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_cancel">注销</string>
    <string name="login_confirm_pwd">确认密码</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember">记住密码</string>
    <string name="login_forget">忘记密码 ?</string>
    <string name="login_update_pwd">修改密码</string>
    <string name="txt_getMsgCode_validate">获取验证码</string>
    <string name="phone">0123456789</string>
    <string name="password">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_code_hint">请输入验证码</string>

    <!--报名学车-->
    <string name="title_apply">报名学车</string>
    <string name="personal_title">我</string>
    <string name="personal_detail_title">个人信息</string>
    <string name="personal_detail_icon">头像</string>
    <string name="personal_detail_sex">性别</string>
    <string name="personal_detail_name">昵称</string>
    <string name="personal_detail_age">出生年月</string>
    <string name="personal_detail_education">学历</string>
    <string name="personal_detail_apply_address">报名地点</string>
    <string name="personal_detail_phone">手机</string>
    <string name="personal_detail_email">邮箱</string>
    <string name="personal_detail_address">地址</string>
    <string name="personal_detail_QQ">QQ号码</string>
    <string name="personal_detail_id_card">身份证号</string>
    <string name="hierarchical_resident_create_birthday">生日</string>
    <string name="hierarchical_resident_create_hint_name">请输入患者姓名</string>
    <string name="hierarchical_resident_create_hint_card">身份证可自动获取性别，年龄</string>
    <string name="hierarchical_resident_create_hint_sex">请选择患者性别</string>
    <string name="hierarchical_resident_create_hint_phone">用于联系患者</string>
    <string name="hierarchical_resident_create_hint_birthday">请选择出生日期</string>
    <string name="hierarchical_resident_create_hint_medical">请输入患者的医保号</string>
    <string name="hierarchical_resident_create_hint_patient">请输入患者的就诊卡号</string>
    <string name="hierarchical_resident_create_hint_place">请输入患者的籍贯</string>
    <string name="hierarchical_resident_create_hint_community">请选择所属社区</string>
    <string name="hierarchical_resident_create_hint_address">请输入患者家庭住址</string>
    <string name="login_register_age_small">年龄格式不正确，请重新选择</string>
    <string name="personal_sex_men">男</string>
    <string name="personal_sex_women">女</string>

    <string name="title_apply_history">报名订单</string>


    <!--预约学车-->
    <string name="title_study">预约学车</string>
    <string name="title_study_history">学车订单</string>
    <string name="study_history_assess">评价教练</string>
    <string name="study_order_assess_teacher">为教练打分</string>

    <!--预约考试-->
    <string name="title_examination">预约考试</string>


    <!--个人中心-->
    <!--我的钱包-->
    <string name="title_account">我的钱包</string>
    <string name="account_surplus">账户余额（元）</string>
    <string name="account_cost_record">消费记录</string>
    <string name="account_recharge_title">账户充值</string>
    <string name="account_recharge_record">充值记录</string>
    <string name="account_recharge">马上充值</string>
    <string name="account_ali">支付宝</string>
    <string name="account_wechat">微信支付</string>
    <!-- 提现-->
    <string name="account_withdraw">提现</string>
    <string name="account_withdraw_record">提现记录</string>
    <string name="account_can_withdraw">可提现金额</string>
    <string name="account_withdraw_money">提现金额</string>
    <string name="account_withdraw_unit">金额（元）</string>
    <string name="account_withdraw_hint">请输入提现金额</string>
    <string name="account_withdraw_hint2">提现至您最近用于支付或充值的资金账户</string>

    <!--我的收藏-->
    <string name="title_collect">我的收藏</string>


    <!--我的消息-->
    <string name="title_notice">我的消息</string>
    <string name="title_coupon">代金券</string>
    <string name="title_more">更多</string>

    <!--驾校主页-->
    <string name="title_school">驾校主页</string>
</resources>
