<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_m"
            android:text="@string/account_surplus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/account_paytype_frg_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0.0"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/account_frg_recharge"
            style="@style/comm_select_style"
            android:layout_marginBottom="@dimen/layout_margin_hm"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="@dimen/layout_margin_xxh"
            android:text="@string/account_recharge" />

        <Button
            android:id="@+id/account_frg_withdraw"
            style="@style/comm_select_style2"
            android:layout_marginBottom="@dimen/layout_margin_hm"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/account_withdraw"
            android:visibility="gone" />
    </LinearLayout>

    <com.mobo.mobolibrary.ui.widget.empty.EmptyLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</RelativeLayout>