<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/tv_name"
                style="@style/personal_detail_title"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_name"
                android:text="@string/personal_detail_name" />

            <com.zjc.drivingschool.widget.ContainsEmojiEditText
                android:id="@+id/hierarchical_create_resident_frg_edt_name"
                style="@style/referral_info_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:layout_toRightOf="@+id/tv_name"
                android:background="@color/transparent"
                android:gravity="right"
                android:hint="学员姓名"
                android:maxLength="7"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_ml" />

        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/tv_phone"
                style="@style/personal_detail_title"
                android:drawableLeft="@drawable/icon_login_phone"
                android:text="@string/personal_detail_phone" />

            <com.zjc.drivingschool.widget.ContainsEmojiEditText
                android:id="@+id/hierarchical_create_resident_frg_edt_phone"
                style="@style/referral_info_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:layout_toRightOf="@+id/tv_phone"
                android:background="@color/transparent"
                android:gravity="right"
                android:hint="联系电话"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_ml" />


        <LinearLayout
            style="@style/comm_layout_two"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sex"
                style="@style/personal_detail_title"
                android:drawableLeft="@drawable/icon_sex"
                android:text="@string/personal_detail_sex" />

            <TextView
                android:id="@+id/hierarchical_create_resident_frg_tv_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="right" />
        </LinearLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_ml" />

        <LinearLayout
            style="@style/comm_layout_two"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_age"
                style="@style/personal_detail_title"
                android:drawableLeft="@drawable/icon_age"
                android:text="@string/personal_detail_age" />

            <TextView
                android:id="@+id/hierarchical_create_resident_frg_tv_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="right" />
        </LinearLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_ml" />

        <LinearLayout
            style="@style/comm_layout_two"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_education"
                style="@style/personal_detail_title"
                android:drawableLeft="@drawable/icon_age"
                android:text="@string/personal_detail_education" />

            <TextView
                android:id="@+id/hierarchical_create_resident_frg_tv_education"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="right" />
        </LinearLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_ml" />

        <LinearLayout
            style="@style/comm_layout_two"
            android:orientation="horizontal">

            <TextView
                style="@style/personal_detail_title"
                android:drawableLeft="@drawable/icon_age"
                android:text="@string/personal_detail_apply_address" />

            <TextView
                android:id="@+id/tv_locale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="right" />
        </LinearLayout>

        <View style="@style/line_horStyle" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="提交"
            android:textColor="@color/comm_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="查看体验流程"
            android:textColor="@color/comm_blue" />

    </LinearLayout>
</ScrollView>